name:                vector-fixed
version:             0.1.0.0
synopsis:            Fixed-size vectors using type-level naturals
description:         Fixed-size vectors using type-level naturals
homepage:            https://github.com/nickspinale/vector-fixed
bug-reports:         https://github.com/nickspinale/vector-fixed/issues
stability:           provisional
license:             MIT
license-file:        LICENSE
copyright:           Copyright (c) 2015 Nick Spinale
author:              Nick Spinale
maintainer:          Nick Spinale <spinalen@carleton.edu>
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Data.Vector.Fixed
  build-depends:       base >= 4.8 && <4.9,
                       vector
  default-language:    Haskell2010
